--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -25,18 +25,50 @@
 {% block page_name %}landing{% endblock %}
 {% block body_class %}landing{% endblock %}
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                THINGS
-            </div>
-            <div class="col">
-                MORE THINGS!
-            </div>
-            <div class="col">
-                Other things.
+    <div class="container text-center">
+
+        <div class="row pt-5">
+            <div class="col fs-4">
+                WELCOME TO
             </div>
         </div>
+        <div class="row">
+            <div class="col fw-bold" style="font-size: 4.5rem;">
+            Chernobyl Tissue Bank
+            </div>
+        </div>
+        <div class="row py-5 fs-3">
+            <div class="col"></div>
+            <div class="col-9">
+                <div>
+                    The CTB is a research tissue bank that was established to collect, document, store, and issue to
+                    bona
+                    fide researchers, biological samples donated by patients with thyroid tumours who live in the areas
+                    of
+                    Ukraine and Russia close to the site of the Chernobyl Nuclear Power Plant.
+                </div>
+                <div class="py-3">If you are looking for information on the Chernobyl accident itself please go to ‘<a href="/useful-podcasts-and-videos">Podcasts &amp; Videos</a>’ and ‘<a href="/useful-links">General Information about the Chernobyl Accident</a>’.</div>
+            </div>
+            <div class="col"></div>
+
+        </div>
+{#        <div class="row py-5">#}
+{#            <div class="col">#}
+{##}
+{#                #}
+{#            </div>#}
+        </div>
+{#        <div class="row">#}
+{#            <div class="col">#}
+{#                THINGS#}
+{#            </div>#}
+{#            <div class="col">#}
+{#                MORE THINGS!#}
+{#            </div>#}
+{#            <div class="col">#}
+{#                Other things.#}
+{#            </div>#}
+{#        </div>#}
     </div>
 {% endblock %}
 
