--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,9 +37,9 @@ body {
     /*!*background-color: #fff;*!*/
     /*!*border-bottom: 2px solid #62707c;*!*/
 /*!*}*!*/
-/*!*.navbar-ctb .navbar-brand{*!*/
-    /*!*height: 36px;*!*/
-/*!*}*!*/
+.navbar-ctb .navbar-brand{
+    height: 36px;
+}
 
 /*!*.navbar-ctb .navbar-toggler {*!*/
     /*!*color: rgba(0,0,0,.55);*!*/
@@ -118,14 +118,14 @@ body {
     /*display: none;*/
 /*}*/
 
-/*.card-login img{*/
-    /*padding: 1rem 1.5rem;*/
-/*}*/
-/*.login-intro div{*/
-    /*font-size: 1.3rem;*/
-    /*padding: 1rem;*/
+.card-login img{
+    padding: 1rem 1.5rem;
+}
+.login-intro div{
+    font-size: 1.3rem;
+    padding: 0.4rem;
 
-/*}*/
+}
 
 /*.signup input, .login input, .password_reset input, #password-change input, .password_set input, .email-verify input {*/
     /*width: 100%;*/
